--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,6 +1,28 @@
 @use './base' as *;
 
 .features {
-  background-color: $color-grey-light-2;
+  display: grid;
   grid-column: center-start / center-end;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  align-items: start;
+  margin: 15rem 0;
+  gap: 6rem;
+}
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 1.5rem 2.5rem;
+
+  &__icon {
+    grid-row: 1 / span 2;
+    width: 4.5rem;
+    height: 4.5rem;
+    fill: $color-primary;
+    transform: translateY(-1rem);
+  }
+
+  &__text {
+    font-size: 1.7rem;
+  }
 }
