--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,12 +2,46 @@
 
 .story {
   &__pictures {
-    background-color: $color-primary;
     grid-column: full-start / col-end 4;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    align-items: center;
+    background-image: linear-gradient(
+        to left bottom,
+        rgba($color-primary, 0.4),
+        rgba($color-primary, 0.9)
+      ),
+      url(../img/back.jpg);
+  }
+
+  &__img--1 {
+    grid-row: 2 / 6;
+    grid-column: 2 / 6;
+    width: 100%;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+  }
+
+  &__img--2 {
+    grid-row: 1 / 5;
+    grid-column: 4 / 7;
+    width: 120%;
+    z-index: 1;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.2);
   }
 
   &__content {
+    display: grid;
+    align-content: center;
+    justify-items: start;
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+    padding: 6rem 8dvw;
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+    margin-bottom: 4rem;
   }
 }
