--- a/css/main.css
+++ b/css/main.css
@@ -325,6 +325,67 @@ body {
 }
 
 .footer {
-  background-color: #101d2c;
   grid-column: full-start/full-end;
+  padding: 8rem;
+  background-color: #101d2c;
+}
+
+.nav {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  list-style: none;
+  gap: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.nav__link:link, .nav__link:visited {
+  display: block;
+  padding: 1.5rem;
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.nav__link:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+  -webkit-transform: translateY(-3px);
+      -ms-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+.nav__link:active {
+  background-color: rgba(255, 255, 255, 0.08);
+  -webkit-transform: translateY(-1px);
+      -ms-transform: translateY(-1px);
+          transform: translateY(-1px);
+}
+
+.copyright {
+  font-size: 1.4rem;
+  color: #aaa;
+  margin: 6rem auto 0 auto;
+  text-align: center;
+  width: 70%;
+}
+.copyright__link:link, .copyright__link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: currentColor;
+  background-color: #101d2c;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.copyright__link:hover {
+  -webkit-transform: scale(1.3) rotate(2deg);
+      -ms-transform: scale(1.3) rotate(2deg);
+          transform: scale(1.3) rotate(2deg);
+  background-color: rgb(20.08, 36.395, 55.22);
+  -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
 }
