--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,7 +1,35 @@
 @use './base' as *;
 
 .sidebar {
+  display: flex;
+  justify-content: center;
   background-color: $color-primary;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
+}
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  width: 4.5rem;
+  height: 2px;
+  margin-top: 4rem;
+
+  &::before,
+  &::after {
+    display: block;
+    content: '';
+    background-color: #fff;
+    width: 4.5rem;
+    height: 2px;
+  }
+
+  &::before {
+    transform: translateY(-1.5rem);
+  }
+
+  &::after {
+    transform: translateY(1.3rem);
+  }
 }
