--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,12 @@ body {
   font-weight: 400;
 }
 
+.heading-1 {
+  font-size: 4.5rem;
+  color: #f9f7f6;
+  line-height: 1;
+}
+
 .heading-2 {
   font-size: 4rem;
   font-style: italic;
@@ -133,13 +139,92 @@ body {
 }
 
 .header {
-  background-color: #54483a;
   grid-column: full-start/col-end 6;
+  display: grid;
+  grid-template-rows: 1fr -webkit-min-content 6rem 1fr 6rem;
+  grid-template-rows: 1fr min-content 6rem 1fr 6rem;
+  grid-template-columns: -webkit-max-content;
+  grid-template-columns: max-content;
+  row-gap: 1.5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 4rem 8rem 8rem 8rem;
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(80%, rgba(16, 29, 44, 0.93)), to(#101d2c)), url(../img/hero.jpeg);
+  background-image: linear-gradient(to right, rgba(16, 29, 44, 0.93) 80%, #101d2c), url(../img/hero.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+.header__logo {
+  justify-self: center;
+  height: 3rem;
+}
+.header__btn {
+  justify-self: start;
+  -ms-flex-item-align: start;
+      align-self: start;
+}
+.header__seenon-text {
+  display: grid;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
+  grid-template-columns: 1fr max-content 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1.5rem;
+     -moz-column-gap: 1.5rem;
+          column-gap: 1.5rem;
+  font-size: 1.6rem;
+  color: #aaa;
+}
+.header__seenon-text::before, .header__seenon-text::after {
+  display: block;
+  content: "";
+  height: 1px;
+  background-color: currentColor;
+}
+.header__seenon-logos {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  -webkit-column-gap: 3rem;
+     -moz-column-gap: 3rem;
+          column-gap: 3rem;
+  justify-items: center;
+}
+.header__seenon-logos img {
+  height: 2.5rem;
+  -webkit-filter: brightness(70%);
+          filter: brightness(70%);
 }
 
 .realtors {
-  background-color: #101d2c;
   grid-column: col-start 7/full-end;
+  background-color: #101d2c;
+  display: grid;
+  justify-items: center;
+  place-content: center;
+  row-gap: 2rem;
+  padding: 3rem;
+  margin-left: -1.5px;
+}
+.realtors__list {
+  display: grid;
+  grid-template-columns: -webkit-min-content -webkit-max-content;
+  grid-template-columns: min-content max-content;
+  gap: 5dvh 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.realtors__img {
+  display: block;
+  width: 7rem;
+  border-radius: 50%;
+}
+.realtors__sold {
+  margin-top: -3px;
+  text-transform: uppercase;
+  color: #aaa;
 }
 
 .features {
