implement responsive design

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,12 @@ $color-grey-dark-2: #6d5d4b;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+$bp-xl: 75em; // 1200px
+$bp-l: 62.5em; // 1000px
+$bp-m: 50em; // 800px
+$bp-s: 37.5em; // 600px
+$bp-xs: 28.125em; // 450px
+
 *,
 *::before,
 *::after {
@@ -23,6 +29,10 @@ $font-display: 'Josefin Sans', sans-serif;
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @media only screen and (max-width: $bp-xl) {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -39,4 +49,16 @@ body {
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end] minmax(6rem, 1fr) [full-end];
   grid-template-rows: 80dvh min-content 40dvw repeat(3, min-content);
+
+  @media only screen and (max-width: $bp-l) {
+    grid-template-columns:
+      [full-start] minmax(6rem, 1fr)
+      [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+      [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-rows: 6rem 80dvh min-content 40dvw repeat(3, min-content);
+  }
+
+  @media only screen and (max-width: $bp-m) {
+    grid-template-rows: 6rem calc(100dvh - 6rem);
+  }
 }
