--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -3,9 +3,13 @@
 .homes {
   grid-column: center-start / center-end;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 7rem;
   margin: 15rem 0;
+
+  @media only screen and (max-width: $bp-xl) {
+    margin: 8rem 0;
+  }
 }
 
 .home {
