--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@ html {
           box-sizing: border-box;
   font-size: 62.5%;
 }
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
+}
 
 body {
   font-family: "Nunito", sans-serif;
@@ -26,6 +31,19 @@ body {
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   grid-template-rows: 80dvh -webkit-min-content 40dvw repeat(3, -webkit-min-content);
   grid-template-rows: 80dvh min-content 40dvw repeat(3, min-content);
+}
+@media only screen and (max-width: 62.5em) {
+  .container {
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-rows: 6rem 80dvh -webkit-min-content 40dvw repeat(3, -webkit-min-content);
+    grid-template-rows: 6rem 80dvh min-content 40dvw repeat(3, min-content);
+  }
+}
+@media only screen and (max-width: 50em) {
+  .container {
+    grid-template-rows: 6rem calc(100dvh - 6rem);
+  }
 }
 
 .heading-4, .heading-3, .heading-2, .heading-1 {
@@ -111,6 +129,18 @@ body {
   grid-column: sidebar-start/sidebar-end;
   grid-row: 1/-1;
 }
+@media only screen and (max-width: 62.5em) {
+  .sidebar {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 
 .nav-btn {
   border: none;
@@ -137,14 +167,30 @@ body {
       -ms-transform: translateY(1.3rem);
           transform: translateY(1.3rem);
 }
+@media only screen and (max-width: 62.5em) {
+  .nav-btn {
+    margin-top: 0;
+    margin-right: 3rem;
+  }
+  .nav-btn::before {
+    -webkit-transform: translateY(-1.2rem);
+        -ms-transform: translateY(-1.2rem);
+            transform: translateY(-1.2rem);
+  }
+  .nav-btn::after {
+    -webkit-transform: translateY(1rem);
+        -ms-transform: translateY(1rem);
+            transform: translateY(1rem);
+  }
+}
 
 .header {
   grid-column: full-start/col-end 6;
   display: grid;
-  grid-template-rows: 1fr -webkit-min-content 6rem 1fr 6rem;
-  grid-template-rows: 1fr min-content 6rem 1fr 6rem;
-  grid-template-columns: -webkit-max-content;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr -webkit-min-content minmax(6rem, -webkit-min-content) 1fr 6rem;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr 6rem;
+  grid-template-columns: minmax(-webkit-min-content, -webkit-max-content);
+  grid-template-columns: minmax(min-content, max-content);
   row-gap: 1.5rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -190,11 +236,27 @@ body {
      -moz-column-gap: 3rem;
           column-gap: 3rem;
   justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .header__seenon-logos img {
-  height: 2.5rem;
+  max-width: 100%;
+  max-height: 2.5rem;
   -webkit-filter: brightness(70%);
           filter: brightness(70%);
+}
+@media only screen and (max-width: 50em) {
+  .header {
+    grid-column: 1/-1;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(80%, rgba(16, 29, 44, 0.93)), to(#101d2c)), url(../img/hero.jpeg);
+    background-image: linear-gradient(to bottom, rgba(16, 29, 44, 0.93) 80%, #101d2c), url(../img/hero.jpeg);
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .header {
+    padding: 5rem;
+  }
 }
 
 .realtors {
@@ -216,6 +278,22 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media only screen and (max-width: 50em) {
+  .realtors__list {
+    grid-template-columns: repeat(3, -webkit-min-content -webkit-max-content);
+    grid-template-columns: repeat(3, min-content max-content);
+    -webkit-column-gap: 3rem;
+       -moz-column-gap: 3rem;
+            column-gap: 3rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .realtors__list {
+    grid-template-columns: -webkit-min-content -webkit-max-content;
+    grid-template-columns: min-content max-content;
+    gap: 3dvh 2rem;
+  }
+}
 .realtors__img {
   display: block;
   width: 7rem;
@@ -226,16 +304,29 @@ body {
   text-transform: uppercase;
   color: #aaa;
 }
+@media only screen and (max-width: 50em) {
+  .realtors {
+    grid-column: 1/-1;
+    padding-bottom: 5rem;
+    margin-left: 0;
+    margin-top: -1.5px;
+  }
+}
 
 .features {
   display: grid;
   grid-column: center-start/center-end;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
   margin: 15rem 0;
   gap: 6rem;
+}
+@media only screen and (max-width: 75em) {
+  .features {
+    margin: 8rem 0;
+  }
 }
 
 .feature {
@@ -267,6 +358,13 @@ body {
           align-items: center;
   background-image: -webkit-gradient(linear, right top, left bottom, from(rgba(198, 153, 99, 0.4)), to(rgba(198, 153, 99, 0.9))), url(../img/back.jpg);
   background-image: linear-gradient(to left bottom, rgba(198, 153, 99, 0.4), rgba(198, 153, 99, 0.9)), url(../img/back.jpg);
+  background-size: cover;
+}
+@media only screen and (max-width: 50em) {
+  .story__pictures {
+    grid-column: 1/-1;
+    padding: 6rem;
+  }
 }
 .story__img--1 {
   grid-row: 2/6;
@@ -275,6 +373,12 @@ body {
   -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
           box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
 }
+@media only screen and (max-width: 50em) {
+  .story__img--1 {
+    grid-column: 1/5;
+    grid-row: 1/-1;
+  }
+}
 .story__img--2 {
   grid-row: 1/5;
   grid-column: 4/7;
@@ -282,6 +386,12 @@ body {
   z-index: 1;
   -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+}
+@media only screen and (max-width: 50em) {
+  .story__img--2 {
+    grid-row: 1/-1;
+    width: 100%;
+  }
 }
 .story__content {
   display: grid;
@@ -292,6 +402,12 @@ body {
   grid-column: col-start 5/full-end;
   padding: 6rem 8dvw;
 }
+@media only screen and (max-width: 50em) {
+  .story__content {
+    grid-column: 1/-1;
+    grid-row: 5/6;
+  }
+}
 .story__text {
   font-size: 1.5rem;
   font-style: italic;
@@ -301,9 +417,14 @@ body {
 .homes {
   grid-column: center-start/center-end;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 7rem;
   margin: 15rem 0;
+}
+@media only screen and (max-width: 75em) {
+  .homes {
+    margin: 8rem 0;
+  }
 }
 
 .home {
