--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use './base' as *;
 
 .footer {
@@ -56,7 +57,7 @@
 
   &__link:hover {
     transform: scale(1.3) rotate(2deg);
-    background-color: lighten($color-secondary, 3%);
+    background-color: color.adjust($color-secondary, $lightness: 3%);
     box-shadow: 0 1rem 3rem rgba(#000, 0.2);
   }
 }
