--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,8 +3,8 @@
 .header {
   grid-column: full-start / col-end 6;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr 6rem;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr 6rem;
+  grid-template-columns: minmax(min-content, max-content);
   row-gap: 1.5rem;
   justify-content: center;
   padding: 4rem 8rem 8rem 8rem;
@@ -49,10 +49,26 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 3rem;
     justify-items: center;
+    align-items: center;
 
     img {
-      height: 2.5rem;
+      max-width: 100%;
+      max-height: 2.5rem;
       filter: brightness(70%);
     }
+  }
+
+  @media only screen and (max-width: $bp-m) {
+    grid-column: 1 / -1;
+    background-image: linear-gradient(
+        to bottom,
+        rgba($color-secondary, 0.93) 80%,
+        rgba($color-secondary, 1)
+      ),
+      url(../img/hero.jpeg);
+  }
+
+  @media only screen and (max-width: $bp-s) {
+    padding: 5rem;
   }
 }
