--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -15,6 +15,16 @@
     grid-template-columns: min-content max-content;
     gap: 5dvh 2rem;
     align-items: center;
+
+    @media only screen and (max-width: $bp-m) {
+      grid-template-columns: repeat(3, min-content max-content);
+      column-gap: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-s) {
+      grid-template-columns: min-content max-content;
+      gap: 3dvh 2rem;
+    }
   }
 
   &__img {
@@ -27,5 +37,12 @@
     margin-top: -3px;
     text-transform: uppercase;
     color: $color-grey-light-2;
+  }
+
+  @media only screen and (max-width: $bp-m) {
+    grid-column: 1 / -1;
+    padding-bottom: 5rem;
+    margin-left: 0;
+    margin-top: -1.5px; // header background overlapping crutch fix
   }
 }
