--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -13,6 +13,12 @@
         rgba($color-primary, 0.9)
       ),
       url(../img/back.jpg);
+    background-size: cover;
+
+    @media only screen and (max-width: $bp-m) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
 
   &__img--1 {
@@ -20,6 +26,11 @@
     grid-column: 2 / 6;
     width: 100%;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+
+    @media only screen and (max-width: $bp-m) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+    }
   }
 
   &__img--2 {
@@ -28,6 +39,11 @@
     width: 120%;
     z-index: 1;
     box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+
+    @media only screen and (max-width: $bp-m) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__content {
@@ -37,6 +53,11 @@
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
     padding: 6rem 8dvw;
+
+    @media only screen and (max-width: $bp-m) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
